--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-streamlit==1.38.0
-qdrant-client==1.10.1
-sentence-transformers==2.2.2
-transformers==4.44.2
-accelerate==0.33.0
-sentencepiece==0.1.99
-torch==2.3.1
-numpy==1.26.4
-langchain==0.2.16
-langchain-groq==0.1.3
-python-dotenv==1.0.1
-watchdog==4.0.1
+streamlit>=1.38,<1.40
+qdrant-client>=1.10,<1.11
+sentence-transformers>=2.2.2,<3.0
+transformers>=4.44,<4.47
+torch>=2.7,<2.9
+numpy>=2.1,<3
+langchain>=0.2.16,<0.3
+langchain-groq>=0.1.3,<0.2
+python-dotenv>=1.0,<2
