--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-streamlit>=1.38,<1.40
-qdrant-client>=1.10,<1.11
-sentence-transformers>=2.2.2,<3.0
-transformers>=4.44,<4.47
-torch>=2.7,<2.9
-numpy>=2.1,<3
-langchain>=0.2.16,<0.3
-langchain-groq>=0.1.3,<0.2
-python-dotenv>=1.0,<2
+streamlit==1.39.1
+qdrant-client==1.10.1
+numpy==1.26.4
+torch==2.8.0
+transformers==4.46.3
+tokenizers==0.20.3
+sentencepiece==0.2.1
+sentence-transformers==2.6.1
+accelerate==0.33.0
+langchain==0.2.17
+langchain-groq==0.1.10
+python-dotenv==1.1.1
