--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Streamlit secrets
+/.streamlit/secrets.toml
+/streamlit/secrets.toml
+
+# Ещё полезно
+.env
+.venv/
+__pycache__/
